fix: navbar z-index bugs

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,7 @@ body {
   margin-bottom: 0px !important;
   padding-bottom: 0px !important;
   position: relative;
+  overflow-y: scroll !important;
 }
 
 main {
